Fix gradle publish

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-group = com.github.smaild.gradle
+group = io.github.smaild.gradle
 description = Gradle plugin for java applications
 version = 1.0.0
